<resources>
    <string name="app_name">Sky Nest</string>
    <string name="achieve">Achievement</string>
    <string name="guide">Field Guide</string>
    <string name="photo">Take Photo</string>
    <string name="hotspots">Bird Hotspots</string>
    <string name="gallery">Gallery</string>
    <string name="favourite">Favourites</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="signout">Sign Out</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="level1">Newbie</string>
    <string name="level2">Beginner</string>
    <string name="level3">Intermediate</string>
    <string name="level4">Pro</string>
    <string name="level5">Expert</string>
</resources>