<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#374A12"
    tools:context=".HomeDashboard">

    <LinearLayout
        android:id="@+id/lay_home"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:backgroundTint="#E8FBC3"
        android:background="@drawable/back_boarder"
        android:outlineProvider="paddedBounds">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/abeezee"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:minHeight="48dp"
            android:textColor="#305C15"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/abeezee"
            android:text="@string/achieve"
            android:textAlignment="center"
            android:textColor="#305C15"
            android:textSize="35sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/iv_bird"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/achieve"
            app:srcCompat="@drawable/img_bird1" />

        <TextView
            android:id="@+id/tv_achievement"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/abeezee"
            android:text="30 of 30 Observations"
            android:textAlignment="center"
            android:textColor="#305C15"
            android:textSize="25sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_guide"
        android:layout_width="170dp"
        android:layout_height="125dp"
        android:layout_below="@id/lay_home"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_border"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:id="@+id/iv_guide"
            android:layout_width="94dp"
            android:layout_height="70dp"
            android:contentDescription="@string/guide"
            android:src="@drawable/baseline_menu_book_24" />

        <TextView
            android:layout_width="158dp"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="@string/guide"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_photo"
        android:layout_width="170dp"
        android:layout_height="125dp"
        android:layout_below="@id/lay_guide"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_border"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="94dp"
            android:layout_height="70dp"
            android:contentDescription="@string/photo"
            android:src="@drawable/baseline_photo_camera_24" />

        <TextView
            android:layout_width="158dp"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="@string/photo"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_hotspot"
        android:layout_width="170dp"
        android:layout_height="125dp"
        android:layout_below="@id/lay_home"
        android:layout_marginStart="222dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_border"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:id="@+id/iv_hotsopt"
            android:layout_width="94dp"
            android:layout_height="70dp"
            android:contentDescription="@string/hotspots"
            android:src="@drawable/baseline_location_on_24" />

        <TextView
            android:layout_width="158dp"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="@string/hotspots"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_gallery"
        android:layout_width="170dp"
        android:layout_height="125dp"
        android:layout_below="@id/lay_hotspot"
        android:layout_marginStart="222dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_border"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:id="@+id/iv_gallery"
            android:layout_width="94dp"
            android:layout_height="70dp"
            android:contentDescription="@string/gallery"
            android:src="@drawable/baseline_photo_library_24" />

        <TextView
            android:layout_width="158dp"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="@string/gallery"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>