<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8FBC3"
    tools:context=".Profile">

    <ScrollView
        android:id="@+id/sv_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/lay_profile"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="#071408"
                android:orientation="vertical"
                android:outlineProvider="paddedBounds">

                <ImageView
                    android:id="@+id/iv_bird"
                    android:layout_width="166dp"
                    android:layout_height="140dp"
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="100dp"
                    android:contentDescription="@string/achieve"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textAlignment="center"
                    android:text="My Profile"
                    android:textStyle="bold"
                    android:fontFamily="@font/abeezee"
                    android:textColor="@color/white"
                    android:textSize="28sp" />


                <Button
                    android:id="@+id/btn_SignOut"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="135dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#030500"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/signout"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:cornerRadius="30dp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/lay_achievement"
                android:layout_width="match_parent"
                android:layout_below="@id/lay_profile"
                android:layout_height="300dp"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:backgroundTint="#748A24"
                android:background="@drawable/back_boarder"
                android:outlineProvider="paddedBounds">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/achieve"
                    android:textAlignment="center"
                    android:textColor="#305C15"
                    android:textSize="30sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/level1"
                    android:textAlignment="center"
                    android:textColor="#305C15"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/achieve"
                    app:srcCompat="@drawable/img_bird1" />

                <TextView
                    android:id="@+id/tv_achievement"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/abeezee"
                    android:text="0 of 30 Observations"
                    android:textAlignment="center"
                    android:textColor="#305C15"
                    android:textSize="25sp"
                    android:textStyle="bold"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/lay_favourite"
                android:layout_width="170dp"
                android:layout_height="125dp"
                android:layout_below="@id/lay_achievement"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="90dp"
                android:background="@drawable/button_border"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/iv_heart"
                    android:layout_width="94dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/favourite"
                    android:src="@drawable/baseline_favorite_24" />

                <TextView
                    android:layout_width="158dp"
                    android:layout_height="35dp"
                    android:gravity="center"
                    android:text="@string/favourite"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lay_gallery"
                android:layout_width="170dp"
                android:layout_height="125dp"
                android:layout_below="@id/lay_achievement"
                android:layout_marginStart="222dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="90dp"
                android:background="@drawable/button_border"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/iv_gallery"
                    android:layout_width="94dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/gallery"
                    android:src="@drawable/baseline_photo_library_24" />

                <TextView
                    android:layout_width="158dp"
                    android:layout_height="35dp"
                    android:gravity="center"
                    android:text="@string/gallery"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemIconTint="@drawable/item_selected"
            app:menu="@menu/bottom_navigation_menu" />

    </LinearLayout>

</RelativeLayout>